--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smoothburn",
+  "name": "PastelWater",
   "displayName": "PastelWater",
   "description": "Pastel Water is a dynamic and vibrant Visual Studio Code theme designed to ignite your coding experience with its warm and energetic color palette. Inspired by the intensity of a sunset, Pastel Water infuses your editor with a sense of sophistication and vitality.",
   "version": "0.0.0",
